WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45898
editing/selection/context-menu-on-text.html fails on chromium
https://bugs.webkit.org/show_bug.cgi?id=45898
Summary
editing/selection/context-menu-on-text.html fails on chromium
John Gregg
Reported
2010-09-16 09:29:33 PDT
new test added in
http://trac.webkit.org/changeset/67626/
fails on chromium, being skipped.
Attachments
Patch
(1.09 KB, patch)
2010-09-16 09:55 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
Patch
(10.84 KB, patch)
2010-11-11 00:23 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(10.76 KB, patch)
2010-11-11 20:07 PST
,
Hajime Morrita
tkent
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2010-09-16 09:55:48 PDT
Created
attachment 67810
[details]
Patch
John Gregg
Comment 2
2010-09-16 10:05:00 PDT
Committed
r67632
: <
http://trac.webkit.org/changeset/67632
>
John Gregg
Comment 3
2010-09-16 10:05:40 PDT
Patch landed was just test expectations. Bug still exists.
WebKit Review Bot
Comment 4
2010-09-16 10:35:13 PDT
http://trac.webkit.org/changeset/67632
might have broken GTK Linux 32-bit Release
Hajime Morrita
Comment 5
2010-11-11 00:23:42 PST
Created
attachment 73585
[details]
Patch
Hajime Morrita
Comment 6
2010-11-11 00:29:31 PST
(In reply to
comment #5
)
> Created an attachment (id=73585) [details] > Patch
The patch doesn't care about spellchecking. I filed
Bug 49366
for that case.
Kent Tamura
Comment 7
2010-11-11 19:38:51 PST
Comment on
attachment 73585
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73585&action=review
> WebKit/chromium/src/WebBindings.cpp:330 > + for (size_t i = 0; i < data.size(); i++)
nit: we prefer ++i
> WebKitTools/DumpRenderTree/chromium/EventSender.cpp:741 > + // These constant is based on Safari's context menu because tests are made for it.
"These constants are"?
> WebKitTools/DumpRenderTree/chromium/EventSender.cpp:770 > + // Clears last context menu data because > + // we need to know if the context menu be requested after following mouse events.
Line breaking between "because" and "we" looks curious. The first line is not so long and it can contain more words.
> WebKitTools/DumpRenderTree/chromium/WebViewHost.cpp:449 > + OwnPtr<WebContextMenuData> given(new WebContextMenuData(contextMenuData)); > + m_lastContextMenuData.swap(given);
Why not m_lastContextMenuData = adoptPtr(new WebContextmenuData(contextMenuData)) ?
> WebKitTools/DumpRenderTree/chromium/WebViewHost.cpp:455 > + OwnPtr<WebContextMenuData> empty; > + m_lastContextMenuData.swap(empty);
Why not m_lastContextMenuData.clear()?
Hajime Morrita
Comment 8
2010-11-11 20:07:30 PST
Created
attachment 73694
[details]
Patch
Hajime Morrita
Comment 9
2010-11-11 20:09:39 PST
Hi Kent-san, thank you for reviewing! I updated the patch to address your feedback.
> > WebKit/chromium/src/WebBindings.cpp:330 > > + for (size_t i = 0; i < data.size(); i++) > > nit: we prefer ++i
Fixed.
> > > WebKitTools/DumpRenderTree/chromium/EventSender.cpp:741 > > + // These constant is based on Safari's context menu because tests are made for it. > > "These constants are"?
Fixed.
> > > WebKitTools/DumpRenderTree/chromium/EventSender.cpp:770 > > + // Clears last context menu data because > > + // we need to know if the context menu be requested after following mouse events. > > Line breaking between "because" and "we" looks curious. The first line is not so long and it can contain more words.
Fixed.
> > > WebKitTools/DumpRenderTree/chromium/WebViewHost.cpp:449 > > + OwnPtr<WebContextMenuData> given(new WebContextMenuData(contextMenuData)); > > + m_lastContextMenuData.swap(given); > > Why not m_lastContextMenuData = adoptPtr(new WebContextmenuData(contextMenuData)) ?
Rewrote to use adoptPtr(). Thank you for telling this.
> > > WebKitTools/DumpRenderTree/chromium/WebViewHost.cpp:455 > > + OwnPtr<WebContextMenuData> empty; > > + m_lastContextMenuData.swap(empty); > > Why not m_lastContextMenuData.clear()?
Fixed.
Kent Tamura
Comment 10
2010-11-11 20:16:27 PST
Comment on
attachment 73694
[details]
Patch ok
Hajime Morrita
Comment 11
2010-11-11 22:02:21 PST
Committed
r71886
: <
http://trac.webkit.org/changeset/71886
>
WebKit Review Bot
Comment 12
2010-11-11 22:31:50 PST
http://trac.webkit.org/changeset/71886
might have broken Chromium Win Release
Marcus Bulach
Comment 13
2010-11-12 03:00:30 PST
(In reply to
comment #12
)
>
http://trac.webkit.org/changeset/71886
might have broken Chromium Win Release
We need to make a similar change to fix test_shell. I've temporarily disabled this test again, see more details:
https://bugs.webkit.org/show_bug.cgi?id=45898
Marcus Bulach
Comment 14
2010-11-12 03:01:02 PST
(In reply to
comment #13
)
> (In reply to
comment #12
) > >
http://trac.webkit.org/changeset/71886
might have broken Chromium Win Release > > We need to make a similar change to fix test_shell. > I've temporarily disabled this test again, see more details: >
https://bugs.webkit.org/show_bug.cgi?id=45898
Sorry, this is the correct bug:
https://bugs.webkit.org/show_bug.cgi?id=49436
Hajime Morrita
Comment 15
2010-11-14 17:18:50 PST
Hi Bulach, thank you for file them! I have one more upcoming DRT change. So I'll port them to test_shell after land next one. (In reply to
comment #14
)
> (In reply to
comment #13
) > > (In reply to
comment #12
) > > >
http://trac.webkit.org/changeset/71886
might have broken Chromium Win Release > > > > We need to make a similar change to fix test_shell. > > I've temporarily disabled this test again, see more details: > >
https://bugs.webkit.org/show_bug.cgi?id=45898
> > Sorry, this is the correct bug: >
https://bugs.webkit.org/show_bug.cgi?id=49436
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug