2010-11-11  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        editing/selection/context-menu-on-text.html fails on chromium
        https://bugs.webkit.org/show_bug.cgi?id=45898

        * platform/chromium/test_expectations.txt: Unskipped context-menu-on-text.html
2010-11-11  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        editing/selection/context-menu-on-text.html fails on chromium
        https://bugs.webkit.org/show_bug.cgi?id=45898

        Added makeStringArray(), that is used by DumpRenderTree.

        * public/WebBindings.h:
        * src/WebBindings.cpp:
        (WebKit::makeStringArrayImpl): Added.
        (WebKit::WebBindings::makeStringArray): Added.
2010-11-11  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        editing/selection/context-menu-on-text.html fails on chromium
        https://bugs.webkit.org/show_bug.cgi?id=45898

        Enhance Chromium's EventSender::contextClick() to return
        array of menu strings. The implementation incomplete because
        Although actual context menu is implemented by the browser,
        it reflects editability of underlying context thus makes
        context-menu-on-text.html passed.

        * DumpRenderTree/chromium/EventSender.cpp:
        (makeMenuItemStringsFor): Added.
        (EventSender::contextClick): Now returns array of menu strings.
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::showContextMenu): Now storing given WebContextMenuData object.
        (WebViewHost::clearContextMenuData): Added.
        (WebViewHost::lastContextMenuData): Added.
        * DumpRenderTree/chromium/WebViewHost.h:

Canonical link: https://commits.webkit.org/62362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71886 268f45cc-cd09-0410-ab3c-d52691b4dbfc