WebKit/chromium/public/WebBindings.h
@@ -32,6 +32,7 @@
 #define WebBindings_h
 
 #include "WebCommon.h"
+#include "WebString.h"
 #include "WebVector.h"
 #include <bindings/npruntime.h>
 
@@ -146,6 +147,7 @@ public:
     WEBKIT_API static bool getElement(NPObject* element, WebElement*);
 
     WEBKIT_API static NPObject* makeIntArray(const WebVector<int>&);
+    WEBKIT_API static NPObject* makeStringArray(const WebVector<WebString>&);
 
     // Exceptions -------------------------------------------------------------
 
