WebKitTools/DumpRenderTree/chromium/EventSender.cpp
@@ -44,6 +44,7 @@
 #include "EventSender.h"
 
 #include "TestShell.h"
+#include "WebContextMenuData.h"
 #include "WebDragData.h"
 #include "WebDragOperation.h"
 #include "WebPoint.h"
@@ -728,16 +729,48 @@ void EventSender::replaySavedEvents()
     replayingSavedEvents = false;
 }
 
+// Because actual context menu is implemented by the browser side, 
+// this function does only what LayoutTests are expecting:
+// - Many test checks the count of items. So returning non-zero value makes sense.
+// - Some test compares the count before and after some action. So changing the count based on flags
+//   also makes sense. This function is doing such for some flags.
+// - Some test even checks actual string content. So providing it would be also helpful.
+//
+static Vector<WebString> makeMenuItemStringsFor(WebContextMenuData* contextMenu)
+{
+    // These constants are based on Safari's context menu because tests are made for it.
+    static const char* nonEditableMenuStrings[] = { "Back", "Reload Page", "Open in Dashbaord", "<separator>", "View Source", "Save Page As", "Print Page", "Inspect Element", 0 };
+    static const char* editableMenuStrings[] = { "Cut", "Copy", "<separator>", "Paste", "Spelling and Grammar", "Substitutions, Transformations", "Font", "Speech", "Paragraph Direction", "<separator>", 0 };
+
+    // This is possible because mouse events are cancelleable.
+    if (!contextMenu)
+        return Vector<WebString>();
+
+    Vector<WebString> strings;
+
+    if (contextMenu->isEditable) {
+        for (const char** item = editableMenuStrings; *item; ++item) 
+            strings.append(WebString::fromUTF8(*item));
+    } else {
+        for (const char** item = nonEditableMenuStrings; *item; ++item) 
+            strings.append(WebString::fromUTF8(*item));
+    }
+
+    return strings;
+}
+
+
 void EventSender::contextClick(const CppArgumentList& arguments, CppVariant* result)
 {
-    result->setNull();
-
     webview()->layout();
 
     updateClickCountForButton(WebMouseEvent::ButtonRight);
 
-    // Generate right mouse down and up.
+    // Clears last context menu data because we need to know if the context menu be requested 
+    // after following mouse events.
+    m_shell->webViewHost()->clearContextMenuData();
 
+    // Generate right mouse down and up.
     WebMouseEvent event;
     pressedButton = WebMouseEvent::ButtonRight;
     initMouseEvent(WebInputEvent::MouseDown, WebMouseEvent::ButtonRight, lastMousePos, &event);
@@ -747,6 +780,9 @@ void EventSender::contextClick(const CppArgumentList& arguments, CppVariant* res
     webview()->handleInputEvent(event);
 
     pressedButton = WebMouseEvent::ButtonNone;
+
+    WebContextMenuData* lastContextMenu = m_shell->webViewHost()->lastContextMenuData();
+    result->set(WebBindings::makeStringArray(makeMenuItemStringsFor(lastContextMenu)));
 }
 
 class MouseDownTask: public MethodTask<EventSender> {
