WebKitTools/DumpRenderTree/chromium/WebViewHost.h
@@ -90,6 +90,9 @@ class WebViewHost : public WebKit::WebViewClient, public WebKit::WebFrameClient,
     void addClearHeader(const WTF::String& header) { m_clearHeaders.add(header); }
     const HashSet<WTF::String>& clearHeaders() const { return m_clearHeaders; }
 
+    WebKit::WebContextMenuData* lastContextMenuData() const;
+    void clearContextMenuData();
+
     // NavigationHost
     virtual bool navigate(const TestNavigationEntry&, bool reload);
 
@@ -293,6 +296,8 @@ private:
     OwnPtr<skia::PlatformCanvas> m_canvas;
     WebKit::WebRect m_paintRect;
     bool m_isPainting;
+
+    OwnPtr<WebKit::WebContextMenuData> m_lastContextMenuData;
 
 #if !ENABLE(CLIENT_BASED_GEOLOCATION)
     // Geolocation
